#40 fixes the clipped tooltips

--- a/app/assets/stylesheets/grid.scss
+++ b/app/assets/stylesheets/grid.scss
@@ -20,8 +20,6 @@
     padding: 10px;
     margin: 0 5px 5px 0;
     position: relative;
-    overflow: hidden;
-    overflow-x: auto;
   }
 
   .col-8 { min-width: calc(100%/8 - 10px); }
